[package]
name = "ulidtools"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A simple tool to generate and parse ULID"
readme = "README.md"

[dependencies]
ulid = "1.1.3"
uuid = { version = "1.10.0", features = ["v7", "fast-rng"] }
clap = { version = "4.5.17", features = ["derive"] }
color-print = "0.3.6"
chrono = "0.4.38"

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
incremental = false
strip = "debuginfo"
